apps/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/name: registry
  name: registry
  namespace: registry
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: registry
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: registry
  sessionAffinity: None
  type: ClusterIP
