apps/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    spec.ingressClassName: traefik
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirectscheme@kubernetescrd
  generation: 1
  labels:
    app.kubernetes.io/instance: registry
    app.kubernetes.io/name: registry
    app.kubernetes.io/version: 2.4.2
  name: registry
  namespace: registry
spec:
  ingressClassName: traefik
  rules:
    - host: registry.k.gv.ca
      http:
        paths:
          - backend:
              service:
                name: registry
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - registry.k.gv.ca
      secretName: registry-tls
